--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 # Auto detect text files and perform LF normalization
 * text=auto
+Assets/Visuals/Textures/Init/* filter=lfs diff=lfs merge=lfs -text
